--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -27,7 +27,7 @@
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl mb-12 bg-gray-800 w-2/3" id="choose">
 				<h3 class="pt-3">Welcome back!</h3>
-				<h4 id="text">Please enter your password to countinue!</h4>
+				<h4 id="text">Please enter your password to continue!</h4>
 				<div class="flex flex-col justify-center items-center">
 					<label class="mb-1" id="password_label1">Password</label>
 					<input class="input1" type="password" id="password_input" spellcheck="false" />
