--- a/app/import/index.html
+++ b/app/import/index.html
@@ -78,7 +78,7 @@
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
 						<p class="text3">
-							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the image(s) you transfered.
+							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the image(s) you transferred.
 							<br />
 							<br />
 							If you need more steps or help:
