--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -27,7 +27,7 @@
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16" id="choose">
 				<h3 class="pt-3">Welcome to Authme!</h3>
-				<h4 id="text">Please create a password to encryt your 2FA codes!</h4>
+				<h4 id="text">Please create a password to encrypt your 2FA codes!</h4>
 				<div class="flex flex-row justify-center gap-3 pb-5 select-none">
 					<div class="flex flex-col">
 						<label class="mb-1" id="password_label1">Password</label>
@@ -79,7 +79,7 @@
 								</svg>
 								Generate key
 							</button>
-							<h3>Use new encrypton method</h3>
+							<h3>Use new encryption method</h3>
 							<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
