--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -237,7 +237,7 @@
 						</div>
 						<div>
 							<h3>Disable hardware acceleration</h3>
-							<p class="text3">Disables hardware acceleration. Disable this if you expereince frame drops or lags.</p>
+							<p class="text3">Disables hardware acceleration. Disable this if you experience frame drops or lags.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 									<input id="tgl7" onclick="hardware()" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
@@ -291,7 +291,7 @@
 						<br />
 						<hr />
 						<h3>Status</h3>
-						<p class="text3">Current status of the API, used for updates only. Click for all the status informations.</p>
+						<p class="text3">Current status of the API, used for updates only. Click for all the status information.</p>
 						<button class="buttoni" id="but6" onclick="statusLink()">-</button>
 						<br />
 						<hr />
@@ -339,7 +339,7 @@
 						<br />
 						<hr />
 						<h3>Reset search after copy</h3>
-						<p class="text3">Reset the search bar after you copied your code. Usefull if you copy a lot of codes.</p>
+						<p class="text3">Reset the search bar after you copied your code. Useful if you copy a lot of codes.</p>
 						<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 							<a href="#" onclick="copy()">
 								<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
