--- a/app/application/index.html
+++ b/app/application/index.html
@@ -153,7 +153,7 @@
 			</div>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="starting">
 				<h3 class="pt-3">Getting started</h3>
-				<h4>Usefull options</h4>
+				<h4>Useful options</h4>
 				<div class="flex flex-row items-center justify-center">
 					<div class="gap-3">
 						<button class="buttoni" onclick="configureSettings()">
