--- a/app/export/index.html
+++ b/app/export/index.html
@@ -38,7 +38,7 @@
 			<!-- before export -->
 			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3">
 				<h2 class="pt-3">Export code(s)</h2>
-				<h3>If you saved your config you can export the secrects and the QR code(s).</h3>
+				<h3>If you saved your config you can export the secrets and the QR code(s).</h3>
 				<button class="buttoni but1 mb-4" id="but0" onclick="expChooser()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
