--- a/app/export/index.html
+++ b/app/export/index.html
@@ -46,7 +46,7 @@
 				</button>
 			</div>
 			<!-- after export -->
-			<div class="after_export">
+			<div class="after_export hidden">
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3">
 					<h2 class="pt-3">Save exported code(s)</h2>
 					<h3>Save your exported data as a file to use it elsewhere.</h3>
@@ -71,9 +71,6 @@
 						</div>
 					</div>
 				</div>
-
-				<br />
-				<textarea class="blur" readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
 			<!-- qr codes -->
 		</div>
