Import from camera #141

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -913,6 +913,19 @@
 						<p class="unstable">This feature is WIP! It might be unstable or buggy!</p>
 						<br />
 						<hr />
+						<h3>Use webcam for import</h3>
+						<p class="text3">You can use your webcam to scan QR code(s). Works well with high quality webcams.</p>
+						<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
+							<a href="#" onclick="webcam()">
+								<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<input tabindex="-1" id="tgl8" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
+									<label for="tgl8" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
+							></a>
+							<span id="tgt8" class="text-black text-xl">-</span>
+						</div>
+						<p class="unstable">This feature is WIP! It might be unstable or buggy!</p>
+						<br />
+						<hr />
 						<h3>Codes time offset</h3>
 						<p class="text3">You can set a time offset for the codes, confirm by pressing enter. Specify the time in seconds, it can be a positive or a negative number.</p>
 						<input type="number" id="inp0" class="input1 offset" max="1000" min="-1000" maxlength="5" step="5" value="0" />
