--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
-		<script defer src="./src/js/keys.js"></script>
+		<script defer src="./src/js/shortcuts.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
 		<link rel="stylesheet" href="../../src/tailwind.css" />
@@ -878,6 +878,27 @@
 									</button>
 								</div>
 							</div>
+						</div>
+
+						<br />
+						<hr />
+						<h3>Quick copy shortcuts</h3>
+						<p class="text3">
+							You can create a shortcut for your most used codes to copy quickly.
+							<br />
+							Shortcuts not work on this page, go back to the settings tab to reactivate them!
+						</p>
+						<button class="buttoni" onclick="globalShortcutsLink()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+							</svg>
+							Read docs
+						</button>
+						<br />
+						<br />
+						<br />
+						<div class="quick">
+
 						</div>
 					</div>
 
