Update packages, fix animations

--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -42,7 +42,7 @@
 				<h3>You can rollback to the latest save. If you load your codes below it will overwrite the current rollback save!</h3>
 				<button class="buttoni mb-4" onclick="rollback()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4" />
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
 					</svg>
 					Rollback
 				</button>
