--- a/app/import/index.html
+++ b/app/import/index.html
@@ -26,15 +26,17 @@
 
 		<!-- content -->
 		<div class="center">
-			<h1>Authme</h1>
-			<h2>Import</h2>
-			<p class="text3">You can import from QR code(s) and Google Authenticator QR code(s). You can use your webcam by turning on an experimental feature in settings.</p>
-			<button class="buttoni" onclick="hide()">
-				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-				</svg>
-				Close window
-			</button>
+			<div class="mx-auto rounded-2xl bg-gray-900 w-2/3 mt-16">
+				<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
+				<h2>Import</h2>
+				<h4>You can import from QR code(s) and Google Authenticator QR code(s). You can use your webcam by turning on an experimental feature in settings.</h4>
+				<button class="buttoni mb-6" onclick="hide()">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+					</svg>
+					Close window
+				</button>
+			</div>
 
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
 				<h2 class="pt-3">Instructions</h2>
