--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -24,25 +24,26 @@
 			</div>
 		</div>
 
+		<!-- header -->
+		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
+			<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
+			<h2>Edit codes</h2>
+			<h4>You can edit, delete or add more codes.</h4>
+			<button class="buttoni mb-6" onclick="hide()">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+				</svg>
+				Close window
+			</button>
+		</div>
+
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-32 mb-64 rounded-2xl relative text-center">
-			<!-- header -->
-			<div class="mx-auto rounded-2xl bg-gray-900 w-2/3 mt-16">
-				<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
-				<h2>Edit codes</h2>
-				<h4>You can edit, delete or add more codes.</h4>
-				<button class="buttoni mb-6" onclick="hide()">
-					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-					Close window
-				</button>
-			</div>
+		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
 			<!-- rollback -->
-			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 rollback">
-				<h2 id="rollbackBut" class="pt-3">Rollback</h2>
+			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 rollback mt-20">
+				<h2 id="rollbackBut" class="pt-5">Rollback</h2>
 				<h3>You can rollback to the latest save. If you load your codes below it will overwrite the current rollback save!</h3>
-				<button class="buttoni mb-4" onclick="rollback()">
+				<button class="buttoni mb-5" onclick="rollback()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
 					</svg>
@@ -50,10 +51,10 @@
 				</button>
 			</div>
 			<!-- load codes -->
-			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16 beforeLoad">
-				<h2 id="rollbackBut" class="pt-3">Load saved code(s)</h2>
+			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20 mt-20 beforeLoad">
+				<h2 id="rollbackBut" class="pt-5">Load saved code(s)</h2>
 				<h3>You can load the code(s) you saved. After that you can edit them or add more.</h3>
-				<button class="buttoni mb-4" onclick="loadChooser()">
+				<button class="buttoni mb-5" onclick="loadChooser()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 					</svg>
@@ -62,8 +63,8 @@
 			</div>
 			<!-- save codes and add codes -->
 			<div class="afterLoad">
-				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3">
-					<h2 id="rollbackBut" class="pt-3">Edit mode</h2>
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20">
+					<h2 id="rollbackBut" class="pt-5">Edit mode</h2>
 					<h3>Now you can modify existing codes or add more.</h3>
 					<div class="lg:space-x-3 space-y-3 pb-5">
 						<button class="buttoni" onclick="createSave()">
