--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -66,7 +66,7 @@
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20">
 					<h2 id="rollbackBut" class="pt-5">Edit mode</h2>
 					<h3>Now you can modify existing codes or add more.</h3>
-					<div class="lg:space-x-3 space-y-3 pb-5">
+					<div class="flex flex-row justify-center gap-3 flex-wrap pb-5">
 						<button class="buttoni" onclick="createSave()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
