--- a/app/export/index.html
+++ b/app/export/index.html
@@ -54,7 +54,7 @@
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
 					<h2 class="pt-5">Save exported code(s)</h2>
 					<h3>Save your exported data as a file to use it elsewhere.</h3>
-					<div class="flex flex-row flex-wrap justify-center items-center">
+					<div class="flex flex-row justify-center gap-3 flex-wrap">
 						<div>
 							<button class="buttoni" id="but1" onclick="saveFile()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
