Update packages, small improvements

--- a/app/export/index.html
+++ b/app/export/index.html
@@ -9,7 +9,6 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
 		<link rel="stylesheet" href="../.././src/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -37,7 +36,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center blocks">
+		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
 			<!-- before export -->
 			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
 				<h2 class="pt-5">Export code(s)</h2>
@@ -62,7 +61,7 @@
 								</svg>
 								Save as .txt
 							</button>
-							<p class="mt-3 pb-5">Ideal to import for Authme or for Authme Web.</p>
+							<h5 class="text-3 m-3">Ideal to import for Authme or for Authme Web.</h5>
 						</div>
 						<div>
 							<button class="buttoni" id="but2" onclick="saveQrCodes()">
@@ -71,12 +70,11 @@
 								</svg>
 								Save as .html
 							</button>
-							<p class="mt-3 pb-5 relative right-3">Ideal for scanning QR codes or for security backup.</p>
+							<h5 class="m-3">Ideal for scanning QR codes or for security backup.</h5>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- qr codes -->
 		</div>
 	</body>
 </html>
