--- a/app/export/index.html
+++ b/app/export/index.html
@@ -24,7 +24,7 @@
 
 		<!-- header -->
 		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 mt-40 text-center">
-			<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
+			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 			<h2>Export</h2>
 			<h4>You can export everything form your saved config.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
