--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -185,7 +185,7 @@
 				<div class="flex-1 overflow-y-scroll w-4/5 bg-gray-800">
 					<!-- header -->
 					<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
-						<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
+						<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 						<h2>Settings</h2>
 						<h4>You can configure the app setting here.</h4>
 						<button class="buttoni mb-6" onclick="hide()">
