--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -26,7 +26,7 @@
 
 		<!-- header -->
 		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
-			<img src="../../img/icon.png" class="h-16 w-16 relative top-5" />
+			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 			<h2>Edit codes</h2>
 			<h4>You can edit, delete or add more codes.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
