--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -898,7 +898,7 @@
 									</svg>
 									Default
 								</button>
-								<div class="dropdown-content">
+								<div class="dropdown-content animation">
 									<a tabindex="0" class="dropdown-link" href="#" onclick="dropdownChoose(0)">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
