Update packages, style fixes

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -361,7 +361,7 @@
 							<br />
 							<br />
 							<br />
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Show app</h3>
 								</div>
@@ -390,7 +390,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Settings</h3>
 								</div>
@@ -417,7 +417,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Exit</h3>
 								</div>
@@ -444,7 +444,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Reset</h3>
 								</div>
@@ -471,7 +471,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Zoom in</h3>
 								</div>
@@ -498,7 +498,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Zoom out</h3>
 								</div>
@@ -525,7 +525,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Edit codes</h3>
 								</div>
@@ -552,7 +552,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Import</h3>
 								</div>
@@ -579,7 +579,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Export</h3>
 								</div>
@@ -606,7 +606,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Documentation</h3>
 								</div>
@@ -633,7 +633,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Release notes</h3>
 								</div>
@@ -660,7 +660,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Support development</h3>
 								</div>
@@ -687,7 +687,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Show licenses</h3>
 								</div>
@@ -714,7 +714,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Update</h3>
 								</div>
@@ -741,7 +741,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Info</h3>
 								</div>
@@ -785,7 +785,7 @@
 							<br />
 							<br />
 							<br />
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Show app</h3>
 								</div>
@@ -812,7 +812,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Settings</h3>
 								</div>
@@ -839,7 +839,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="flex flex-col w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
+							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
 									<h3>Exit app</h3>
 								</div>
