--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -41,7 +41,7 @@
 		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
 			<!-- rollback -->
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 rollback mt-20">
-				<h2 id="rollbackBut" class="pt-5">Rollback</h2>
+				<h2 id="rollbackText" class="pt-5">Rollback</h2>
 				<h3>You can rollback to the latest save. If you load your codes below it will overwrite the current rollback save!</h3>
 				<button class="buttoni mb-5" onclick="rollback()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
