--- a/app/application/index.html
+++ b/app/application/index.html
@@ -127,7 +127,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center content">
+		<div class="bg-gray-700 w-3/5 mx-auto mt-20 mb-60 rounded-2xl relative text-center content">
 			<h1 class="h1 mb-5">Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
 				<h3 class="pt-3">Please choose your import file!</h3>
@@ -202,8 +202,22 @@
 				</div>
 			</div>
 			<br />
-			<div class="search_container">
-				<input name="search" spellcheck="false" id="search" class="input2 input" onkeyup="search()" onkeydown="search()" placeholder="Search for names..." autofocus />
+			<div class="search_container relative inline-block">
+				<input name="search" spellcheck="false" id="search" class="input2 input" onkeyup="search()" onkeydown="search()" />
+				<!-- search icon -->
+				<svg xmlns="http://www.w3.org/2000/svg" class="searchIcon h-6 w-6 relative top-[-53px] right-[160px] pointer-events-none" fill="none" viewBox="0 0 24 24" stroke="black">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+				</svg>
+				<!-- filter icon -->
+				<svg id="filter" onclick="dropdown()" xmlns="http://www.w3.org/2000/svg" class="searchIcon h-6 w-6 relative top-[-53px] left-[160px] cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="black">
+					<path id="filter_path" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
+				</svg>
+				<br />
+				<!-- dropdown -->
+				<div class="dropdown-content animation">
+					<a tabindex="0" id="link0" class="dropdown-link" href="#"> <input type="checkbox" id="checkbox0" name="checkbox1" class="checkbox" /> Name </a>
+					<a tabindex="0" id="link1" class="dropdown-link" href="#"> <input type="checkbox" id="checkbox1" name="checkbox1" class="checkbox" /> Description </a>
+				</div>
 			</div>
 			<!-- grid -->
 		</div>
