--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -56,7 +56,7 @@
 			<div id="more_options" class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20 pb-10 pt-1 animation invisible hidden">
 				<div>
 					<h3>Forgot password?</h3>
-					<h4>If you have a backup code you can recover your password. If you don't have one then try to think harder.</h4>
+					<h4>If you have a backup key you can recover your password. If you don't have one there is no way to decrypt your codes, try to remember your password.</h4>
 					<button onclick="forgotPassword()" class="buttoni">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
